--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <h1>Privacy Policy for Kids App</h1>
+    <h1>Learning For Kids: First Words</h1>
 
     <p>
       This Privacy Policy describes how personal information is collected, used,
@@ -36,9 +36,8 @@
 
     <h2>Personal Information We Collect</h2>
     <p>
-      Our app does not collect personal information from children under 13. If
-      you believe your child has provided personal information, please contact
-      us immediately to remove it.
+      Our app does not collect personal information. If you believe your we have
+      collected your personal information, please contact us.
     </p>
 
     <h2>How We Use Information</h2>
@@ -63,7 +62,7 @@
     <h2>Contact Us</h2>
     <p>
       If you have any questions or concerns about our privacy policy, please
-      contact us at cjswarehouse5@gmail.com.
+      contact us <a href="index.html">Here</a>.
     </p>
   </body>
 </html>
