--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,23 +27,17 @@
     </style>
   </head>
   <body>
-    <h1>Learning For Kids: First Words</h1>
+    <h1>Learning For Kids: First Words - Privacy Policy</h1>
 
     <p>
       This Privacy Policy describes how personal information is collected, used,
-      and shared when children use our app.
+      and shared when chißldren use our app.
     </p>
 
     <h2>Personal Information We Collect</h2>
     <p>
       Our app does not collect personal information. If you believe your we have
       collected your personal information, please contact us.
-    </p>
-
-    <h2>How We Use Information</h2>
-    <p>
-      We use information collected from children to provide and improve our app,
-      analyze usage trends, and personalize content for a better experience.
     </p>
 
     <h2>Sharing Information</h2>
