--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -31,7 +31,7 @@
 
     <p>
       This Privacy Policy describes how personal information is collected, used,
-      and shared when chißldren use our app.
+      and shared when children use our app.
     </p>
 
     <h2>Personal Information We Collect</h2>
