update privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,29 +27,61 @@
     </style>
   </head>
   <body>
-    <h1>Learning For Kids: First Words - Privacy Policy</h1>
+    <h1>Privacy Policy for Learning For Kids: First Words</h1>
 
     <p>
-      This Privacy Policy describes how personal information is collected, used,
-      and shared when children use our app.
+      This Privacy Policy describes how Learning For Kids ("we", "us", or "our")
+      collects, uses, and discloses personal information collected from users
+      ("you" or "your") of the [Your App Name] mobile application (the "App").
     </p>
 
-    <h2>Personal Information We Collect</h2>
+    <h2>1. Personal Information We Collect</h2>
+    <ul>
+      <li>
+        <strong>In-App Purchases:</strong> When you make in-app purchases
+        through the App, such as subscriptions or one-time purchases, Apple may
+        collect certain information necessary to process your transactions,
+        including your Apple ID, billing information, and transaction details.
+        We do not have access to your payment information or transaction
+        details. Please review Apple's Privacy Policy for more information about
+        how they handle your personal information.
+      </li>
+    </ul>
+
+    <h2>2. How We Use Your Personal Information</h2>
     <p>
-      Our app does not collect personal information. If you believe your we have
-      collected your personal information, please contact us.
+      We do not have access to the personal information collected by Apple
+      during in-app purchases. Any information collected by Apple is subject to
+      Apple's Privacy Policy.
     </p>
 
-    <h2>Sharing Information</h2>
+    <h2>3. Disclosure of Personal Information</h2>
     <p>
-      We do not share personal information with third parties. Any information
-      collected is used solely for app functionality and internal purposes.
+      We do not disclose your personal information to third parties for in-app
+      purchases made through the Apple App Store. Any information collected by
+      Apple is subject to Apple's Privacy Policy.
     </p>
 
-    <h2>Contact Us</h2>
+    <h2>4. Data Security</h2>
     <p>
-      If you have any questions or concerns about our privacy policy, please
-      contact us <a href="index.html">Here</a>.
+      We take reasonable measures to protect the security of your personal
+      information within our control. However, we do not have control over the
+      security of information collected by Apple during in-app purchases. Please
+      review Apple's Privacy Policy for more information about their data
+      security practices.
+    </p>
+
+    <h2>5. Changes to This Privacy Policy</h2>
+    <p>
+      We reserve the right to update or change this Privacy Policy at any time.
+      Any changes will be effective immediately upon posting the revised Privacy
+      Policy on the App.
+    </p>
+
+    <h2>6. Contact Us</h2>
+    <p>
+      If you have any questions or concerns about this Privacy Policy, please
+      contact us at [Your Contact Information].
     </p>
   </body>
 </html>
