--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -81,7 +81,7 @@
     <h2>6. Contact Us</h2>
     <p>
       If you have any questions or concerns about this Privacy Policy, please
-      contact us at [Your Contact Information].
+      contact us <a href="privacy-policy.html">Here</a>.
     </p>
   </body>
 </html>
