--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -36,17 +36,15 @@
     </p>
 
     <h2>1. Personal Information We Collect</h2>
-    <ul>
-      <li>
-        <strong>In-App Purchases:</strong> When you make in-app purchases
-        through the App, such as subscriptions or one-time purchases, Apple may
-        collect certain information necessary to process your transactions,
-        including your Apple ID, billing information, and transaction details.
-        We do not have access to your payment information or transaction
-        details. Please review Apple's Privacy Policy for more information about
-        how they handle your personal information.
-      </li>
-    </ul>
+    <p>
+      <strong>In-App Purchases:</strong> When you make in-app purchases through
+      the App, such as subscriptions or one-time purchases, Apple may collect
+      certain information necessary to process your transactions, including your
+      Apple ID, billing information, and transaction details. We do not have
+      access to your payment information or transaction details. Please review
+      Apple's Privacy Policy for more information about how they handle your
+      personal information.
+    </p>
 
     <h2>2. How We Use Your Personal Information</h2>
     <p>
@@ -81,7 +79,7 @@
     <h2>6. Contact Us</h2>
     <p>
       If you have any questions or concerns about this Privacy Policy, please
-      contact us <a href="privacy-policy.html">Here</a>.
+      contact us <a href="index.html">Here</a>.
     </p>
   </body>
 </html>
