--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -32,7 +32,8 @@
     <p>
       This Privacy Policy describes how Learning For Kids ("we", "us", or "our")
       collects, uses, and discloses personal information collected from users
-      ("you" or "your") of the [Your App Name] mobile application (the "App").
+      ("you" or "your") of the Learning For Kids: First Words mobile application
+      (the "App").
     </p>
 
     <h2>1. Personal Information We Collect</h2>
