--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p>A: Yes, the app supports English and Spanish languages.</p>
         <li>Q: How can I unlock premium features?</li>
         <p>
-          A: You can unlock premium features by purchasing a subscription within
+          A: You can unlock other sounds by making a one time purchase within
           the app.
         </p>
       </ul>
