updates to policy

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </head>
   <body>
     <h1 style="text-align: center">Learning For Kids</h1>
-    <h2 style="text-align: center">First Words Support</h2>
+    <h2 style="text-align: center">Support</h2>
 
     <div class="faq">
       <h2>FAQ</h2>
