--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <h1>Privacy Policy for Learning For Kids: First Words</h1>
+    <h1>Privacy Policy for Learning For Kids</h1>
 
     <p>
       This Privacy Policy describes how Learning For Kids ("we", "us", or "our")
