--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -39,35 +39,37 @@
     <h2>1. Personal Information We Collect</h2>
     <p>
       <strong>In-App Purchases:</strong> When you make in-app purchases through
-      the App, such as subscriptions or one-time purchases, Apple may collect
-      certain information necessary to process your transactions, including your
-      Apple ID, billing information, and transaction details. We do not have
-      access to your payment information or transaction details. Please review
-      Apple's Privacy Policy for more information about how they handle your
-      personal information.
+      the App, such as subscriptions or one-time purchases, Apple and Google may
+      collect certain information necessary to process your transactions,
+      including your Apple ID, Google account information, billing information,
+      and transaction details. We do not have access to your payment information
+      or transaction details. Please review Apple's and Google's Privacy
+      Policies for more information about how they handle your personal
+      information.
     </p>
 
     <h2>2. How We Use Your Personal Information</h2>
     <p>
-      We do not have access to the personal information collected by Apple
-      during in-app purchases. Any information collected by Apple is subject to
-      Apple's Privacy Policy.
+      We do not have access to the personal information collected by Apple or
+      Google during in-app purchases. Any information collected by Apple or
+      Google is subject to their respective Privacy Policies.
     </p>
 
     <h2>3. Disclosure of Personal Information</h2>
     <p>
       We do not disclose your personal information to third parties for in-app
-      purchases made through the Apple App Store. Any information collected by
-      Apple is subject to Apple's Privacy Policy.
+      purchases made through the Apple App Store or Google Play Store. Any
+      information collected by Apple or Google is subject to their respective
+      Privacy Policies.
     </p>
 
     <h2>4. Data Security</h2>
     <p>
       We take reasonable measures to protect the security of your personal
       information within our control. However, we do not have control over the
-      security of information collected by Apple during in-app purchases. Please
-      review Apple's Privacy Policy for more information about their data
-      security practices.
+      security of information collected by Apple or Google during in-app
+      purchases. Please review Apple's and Google's Privacy Policies for more
+      information about their data security practices.
     </p>
 
     <h2>5. Changes to This Privacy Policy</h2>
@@ -80,7 +82,7 @@
     <h2>6. Contact Us</h2>
     <p>
       If you have any questions or concerns about this Privacy Policy, please
-      contact us <a href="index.html">Here</a>.
+      contact us <a href="index.html">here</a>.
     </p>
   </body>
 </html>
